+ Ticket #4345, Text subtitles: Add a mode that automatically chooses the rendering target based on the
  subtitle type, ASS/SSA subtitles will be rendered on the video frame while other text subtitles will
  be rendered on the full window
* Text subtitles: Faster subtitle parsing (up to 4 times faster for ASS/SSA subtitles)
* Text subtitles: Much faster subtitle opening in the Subresync bar
* Ticket #325, Move after playback commands to options and add an option to close and restore logo.
* Ticket #2834, Increase limit on subtitles override placement feature.
* Ticket #4428, Improve the clarity of the error message when opening a subtitle file fails
* Updated Little CMS to v2.6 (git 9c075b3)
* Updated Unrar to v5.1.7
* Updated LAV Filters to v0.62.0.15:
    - Ticket #4539, LAV Video: Fix a crash with DVD subtitles on 64-bit builds when using software decoding
    - Ticket #4639, LAV Splitter: Fix incorrect colors for VobSub tracks in MP4
* Updated Armenian, Basque, Belarusian, Bengali, British English, Catalan, Chinese (Simplified and Traditional),
  Croatian, Czech, Dutch, French, Galician, German, Greek, Hebrew, Hungarian, Italian, Japanese, Korean, Malay,
  Polish, Portuguese (Brazil), Romanian, Russian, Slovak, Slovenian, Spanish, Swedish, Tatar, Turkish, Ukrainian
  and Vietnamese translations
! "Load subtitle" dialog: Fix the file filters on Windows Vista+
! "Resources" tab: The resource saved wasn't always matching the selection
! Ticket #3930, Fix a possible crash with embedded subtitles when the subtitle queue is disabled
! Ticket #4505, Embedded text subtitles: Fix a possible crash related to the Subresync bar
! Ticket #4504, ASS/SSA subtitles: Support floating point values in drawing commands
! Ticket #4536, ASS/SSA subtitles: Fix the parsing of \fs tags when the value was negative
! Ticket #4684, Clicking on the some parts of the volume slider had no effect
! Ticket #4707, EVR-CP: Screenshots were corrupted when "Force 10-bit input" was used